feat: add links

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
           Bahagia itu sederhana, sesederhana kamu tersenyum, bersyukur,
           bersantai menikmati apa yang kamu punya.
         </p>
-        <a href="#" class="cta">Buruan order disini</a>
+        <a href="https://www.instagram.com/rofiqahmad_/" class="cta"
+          >Buruan order disini</a
+        >
       </main>
     </section>
     <!-- hero section end -->
@@ -155,9 +157,15 @@
     <!-- footer start -->
     <footer>
       <div class="sosmed">
-        <a href="#"><i data-feather="instagram"></i></a>
-        <a href="#"><i data-feather="twitter"></i></a>
-        <a href="#"><i data-feather="linkedin"></i></a>
+        <a href="https://www.instagram.com/rofiqahmad_/"
+          ><i data-feather="instagram"></i
+        ></a>
+        <a href="https://twitter.com/Rofiq_Ahmad_"
+          ><i data-feather="twitter"></i
+        ></a>
+        <a href="https://www.linkedin.com/in/rofiq-ahmad-m/"
+          ><i data-feather="linkedin"></i
+        ></a>
       </div>
       <div class="links">
         <a href="#home">Home</a>
