fix: fixed cta and links anchor

--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
           Bahagia itu sederhana, sesederhana kamu tersenyum, bersyukur,
           bersantai menikmati apa yang kamu punya.
         </p>
-        <a href="https://www.instagram.com/rofiqahmad_/" class="cta"
+        <a
+          href="https://www.instagram.com/rofiqahmad_/"
+          target="_blank"
+          class="cta"
           >Buruan order disini</a
         >
       </main>
@@ -169,13 +172,13 @@
     <!-- footer start -->
     <footer>
       <div class="sosmed">
-        <a href="https://www.instagram.com/rofiqahmad_/"
+        <a href="https://www.instagram.com/rofiqahmad_/" target="_blank"
           ><i data-feather="instagram"></i
         ></a>
-        <a href="https://twitter.com/Rofiq_Ahmad_"
+        <a href="https://twitter.com/Rofiq_Ahmad_" target="_blank"
           ><i data-feather="twitter"></i
         ></a>
-        <a href="https://www.linkedin.com/in/rofiq-ahmad-m/"
+        <a href="https://www.linkedin.com/in/rofiq-ahmad-m/" target="_blank"
           ><i data-feather="linkedin"></i
         ></a>
       </div>
