feat: add preventDefault to submit button

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             <i data-feather="phone"></i>
             <input type="text" placeholder="Phone number" / >
           </div>
-          <button type="submit" class="btn">Submit</button>
+          <button type="submit" id="btn-submit" class="btn">Submit</button>
         </form>
       </div>
     </section>
