--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <a href="#home">Home</a>
         <a href="#about">About</a>
         <a href="#menu">Menu</a>
+        <a href="#products">Products</a>
         <a href="#contact">Contact</a>
       </div>
 
@@ -132,6 +133,79 @@
       </div>
     </section>
     <!-- menu section end -->
+
+    <!-- product section start -->
+    <section class="products" id="products">
+      <h2>The <span>Products</span> That We Sale.</h2>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum rerum quam
+        mollitia tempore nulla perferendis.
+      </p>
+
+      <div class="row">
+        <div class="product-card">
+          <div class="product-icons">
+            <a href=""><i data-feather="shopping-cart"></i></a>
+            <a href=""><i data-feather="eye"></i></a>
+          </div>
+          <div class="product-image">
+            <img src="/img/products/1.jpg" alt="product 1" />
+          </div>
+          <div class="product-content">
+            <h3>Coffe Beans 1</h3>
+            <div class="product-stars">
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+            </div>
+            <div class="product-price">IDR 30k <span>IDR 50k</span></div>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-icons">
+            <a href=""><i data-feather="shopping-cart"></i></a>
+            <a href=""><i data-feather="eye"></i></a>
+          </div>
+          <div class="product-image">
+            <img src="/img/products/1.jpg" alt="product 1" />
+          </div>
+          <div class="product-content">
+            <h3>Coffe Beans 1</h3>
+            <div class="product-stars">
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star"></i>
+              <i data-feather="star"></i>
+            </div>
+            <div class="product-price">IDR 30k <span>IDR 50k</span></div>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-icons">
+            <a href=""><i data-feather="shopping-cart"></i></a>
+            <a href=""><i data-feather="eye"></i></a>
+          </div>
+          <div class="product-image">
+            <img src="/img/products/1.jpg" alt="product 1" />
+          </div>
+          <div class="product-content">
+            <h3>Coffe Beans 1</h3>
+            <div class="product-stars">
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star"></i>
+              <i data-feather="star"></i>
+            </div>
+            <div class="product-price">IDR 30k <span>IDR 50k</span></div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- product section end -->
 
     <!-- contact section start -->
     <section id="contact" class="contact">
