feat: add modal

--- a/index.html
+++ b/index.html
@@ -301,6 +301,36 @@
     </footer>
     <!-- footer end -->
 
+    <!-- modal box item detail start -->
+    <div class="modal" id="idem-detai-modal">
+      <div class="modal-container">
+        <a href="#" class="close-icon"><i data-feather="x"></i></a>
+        <div class="modal-content">
+          <img src="img/products/1.jpg" alt="Product 1" />
+          <div class="product-content">
+            <h3>Product 1</h3>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+              Cupiditate quidem illum error eveniet, quibusdam mollitia, itaque
+              unde quo expedita earum consequuntur, provident voluptates a sed.
+            </p>
+            <div class="product-stars">
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+              <i data-feather="star" class="star-full"></i>
+            </div>
+            <div class="product-price">IDR 30k <span>IDR 50k</span></div>
+            <a href="#"
+              ><i data-feather="shopping-cart"></i><span>add to cart</span></a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- modal box item detail end -->
+
     <script>
       feather.replace();
     </script>
