--- a/index.html
+++ b/index.html
@@ -178,8 +178,10 @@
       <div class="row">
         <div class="product-card">
           <div class="product-icons">
-            <a href=""><i data-feather="shopping-cart"></i></a>
-            <a href=""><i data-feather="eye"></i></a>
+            <a href="#"><i data-feather="shopping-cart"></i></a>
+            <a href="#" class="item-detail-button"
+              ><i data-feather="eye"></i
+            ></a>
           </div>
           <div class="product-image">
             <img src="/img/products/1.jpg" alt="product 1" />
@@ -198,8 +200,10 @@
         </div>
         <div class="product-card">
           <div class="product-icons">
-            <a href=""><i data-feather="shopping-cart"></i></a>
-            <a href=""><i data-feather="eye"></i></a>
+            <a href="#"><i data-feather="shopping-cart"></i></a>
+            <a href="#" class="item-detail-button"
+              ><i data-feather="eye"></i
+            ></a>
           </div>
           <div class="product-image">
             <img src="/img/products/1.jpg" alt="product 1" />
@@ -218,8 +222,10 @@
         </div>
         <div class="product-card">
           <div class="product-icons">
-            <a href=""><i data-feather="shopping-cart"></i></a>
-            <a href=""><i data-feather="eye"></i></a>
+            <a href="#"><i data-feather="shopping-cart"></i></a>
+            <a href="#" class="item-detail-button"
+              ><i data-feather="eye"></i
+            ></a>
           </div>
           <div class="product-image">
             <img src="/img/products/1.jpg" alt="product 1" />
@@ -302,7 +308,7 @@
     <!-- footer end -->
 
     <!-- modal box item detail start -->
-    <div class="modal" id="idem-detai-modal">
+    <div class="modal" id="item-detail-modal">
       <div class="modal-container">
         <a href="#" class="close-icon"><i data-feather="x"></i></a>
         <div class="modal-content">
